<?xml version="1.0"?>
<package format="2">
  <name>motor_sim</name>
  <version>0.1.0</version>
  <description>The motor_sim package</description>

  <maintainer email="manuel.ilg@ntb.ch">manuel</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>motor_description</exec_depend>
  <exec_depend>motor_gazebo</exec_depend>
  <exec_depend>motor_rqt</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>

